--- a/templates/serviceTemplate.mustache
+++ b/templates/serviceTemplate.mustache
@@ -3,7 +3,8 @@ import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react';
 import { transformErrorResponse} from '../../redux/response';
 import { toQueryString } from '../../redux/query';
 import { TAGS } from '../../constants/tags';
-import { IList, IFilters } from '../../redux/types';
+import { IList } from '../../redux/types';
+// import { IFilters } from '../../redux/types';
 
 {{#uniqueImports}}
 {{#modelName}}
@@ -11,11 +12,6 @@ import { {{interface}} } from '../../models/{{modelName}}';
 {{/modelName}}
 {{/uniqueImports}}
 
-{{#uniqueParamImports}}
-{{#iNameParam}}
-import { {{iNameParam}} } from '../../params/{{pathGroup}}';
-{{/iNameParam}}
-{{/uniqueParamImports}}
 
 export const {{sliceName}} = createApi({
   reducerPath: {{{slicePath}}},
@@ -25,8 +21,8 @@ export const {{sliceName}} = createApi({
   {{#endpoints}}
     {{name}}: builder.{{method}}<{{#isListEndpoint}}IList<{{interface}}>{{/isListEndpoint}}{{^isListEndpoint}}{{interface}}{{/isListEndpoint}}, {{{types}}}>({
       {{^isMutation}}{{#isListEndpoint}}
-      query: ({{params}}) => {
-        const qs = toQueryString(params)
+      query: ({{{params}}}) => {
+        const qs = toQueryString({{{params}}})
         return `{{{path}}}?${qs}`
       },
       transformErrorResponse: transformErrorResponse,
