Refactor template loading and enhance API interface handling
- Replaced deprecated fsRead function with loadTemplate in helpers.ts for improved template loading.
- Enhanced getNames function in interface.ts to include request body model and interface names, supporting both OpenAPI 2.0 and 3.x styles.
- Added template-loader.ts to manage template file loading from multiple potential paths.
- Created package.json and package-lock.json for test-install directory to facilitate local testing of redux-toolkit-swagger-gen.

--- a/src/templates/serviceTemplate.mustache
+++ b/src/templates/serviceTemplate.mustache
@@ -11,6 +11,11 @@ import { IList } from '../../redux/types';
 import { {{interface}} } from '../../models/{{modelName}}';
 {{/modelName}}
 {{/uniqueImports}}
+{{#uniqueParamImports}}
+{{#modelName}}
+import { {{interface}} } from '../../models/{{modelName}}';
+{{/modelName}}
+{{/uniqueParamImports}}
 
 
 export const {{sliceName}} = createApi({
@@ -18,8 +23,7 @@ export const {{sliceName}} = createApi({
   baseQuery: fetchBaseQuery({ baseUrl: '/api' }),
   tagTypes: Object.values(TAGS),
   endpoints: (builder) => ({
-  {{#endpoints}}
-    {{name}}: builder.{{method}}<{{#isListEndpoint}}IList<{{interface}}>{{/isListEndpoint}}{{^isListEndpoint}}{{interface}}{{/isListEndpoint}}, {{{types}}}>({
+  {{#endpoints}}    {{name}}: builder.{{method}}<{{#isListEndpoint}}IList<{{interface}}>{{/isListEndpoint}}{{^isListEndpoint}}{{interface}}{{/isListEndpoint}}, {{#requestBodyType}}{{requestBodyType}}{{/requestBodyType}}{{^requestBodyType}}{{{types}}}{{/requestBodyType}}>({
       {{^isMutation}}{{#isListEndpoint}}
       query: ({{{params}}}) => {
         const qs = toQueryString({{{params}}})
@@ -36,11 +40,13 @@ export const {{sliceName}} = createApi({
     }),
     {{/isListEndpoint}}
     {{/isMutation}}
-    {{#isMutation}}
-      query: ({{#params}}{{params}}{{/params}}) => ({
+    {{#isMutation}}      query: (body) => ({
         url: `{{{path}}}`,
-        method: '{{httpMethod}}',{{#body}}
-        body: {{body}},{{/body}}
+        method: '{{httpMethod}}',
+        body,
+        headers: {
+          'Content-Type': '{{{contentType}}}',
+        },
       }),
       transformErrorResponse: transformErrorResponse,
       invalidatesTags: [TAGS.{{tag}}],
