--- a/src/templates/storeTemplate.mustache
+++ b/src/templates/storeTemplate.mustache
@@ -6,7 +6,7 @@ import storageSession from 'redux-persist/lib/storage/session'
 import { {{name}} } from '../services/{{path}}/{{name}}'
 {{/services}}
 {{#thunks}}
-import {{thunkName}} from '../thunks/{{path}}/{{thunkName}}'
+import {{thunkName}} from '../thunks/{{path}}/{{path}}.thunk'
 {{/thunks}}
 
 const persistConfig = {
