--- a/src/templates/serviceTemplate.mustache
+++ b/src/templates/serviceTemplate.mustache
@@ -3,7 +3,8 @@ import { createApi, fetchBaseQuery } from '@reduxjs/toolkit/query/react';
 import { transformErrorResponse} from '../../redux/response';
 import { toQueryString } from '../../redux/query';
 import { TAGS } from '../../constants/tags';
-import { IList } from '../../redux/types';
+import { RootState } from '../../redux/store';
+import { API_CONFIG } from '../../redux/config/api';
 // import { IFilters } from '../../redux/types';
 
 {{#uniqueImports}}
@@ -13,41 +14,69 @@ import { {{interface}} } from '../../models/{{modelName}}';
 {{/uniqueImports}}
 {{#uniqueParamImports}}
 {{#modelName}}
-import { {{interface}} } from '../../models/{{modelName}}';
+import { {{interface}} } from 'src/api/params/{{modelName}}';
 {{/modelName}}
 {{/uniqueParamImports}}
 
 
 export const {{sliceName}} = createApi({
   reducerPath: {{{slicePath}}},
-  baseQuery: fetchBaseQuery({ baseUrl: '/api' }),
+  baseQuery: fetchBaseQuery({
+    baseUrl: API_CONFIG.BASE_URL,
+    prepareHeaders: (headers, { getState }) => {
+      const token = (getState() as RootState).auth?.token;
+      if (token) {
+        headers.set('Authorization', `Bearer ${token}`);
+      }
+      return headers;
+    },
+  }),
   tagTypes: Object.values(TAGS),
-  endpoints: (builder) => ({
-  {{#endpoints}}    {{name}}: builder.{{method}}<{{#isListEndpoint}}IList<{{interface}}>{{/isListEndpoint}}{{^isListEndpoint}}{{interface}}{{/isListEndpoint}}, {{#requestBodyType}}{{requestBodyType}}{{/requestBodyType}}{{^requestBodyType}}{{{types}}}{{/requestBodyType}}>({
+  endpoints: (builder) => ({ {{#endpoints}}
+    {{name}}: builder.{{method}}<{{interface}}{{#isResponseArray}}[]{{/isResponseArray}}, {{#paramInterfaceName}}{{paramInterfaceName}}{{/paramInterfaceName}}{{^paramInterfaceName}}{{#requestBodyType}}{{requestBodyType}}{{#isRequestBodyArray}}[]{{/isRequestBodyArray}}{{/requestBodyType}}{{^requestBodyType}}{{{types}}}{{/requestBodyType}}{{/paramInterfaceName}}>({
       {{^isMutation}}{{#isListEndpoint}}
-      query: ({{{params}}}) => {
-        const qs = toQueryString({{{params}}})
-        return `{{{path}}}?${qs}`
+      query: ({{#hasPathParams}}{ {{pathParamsList}}, ...params }{{/hasPathParams}}{{^hasPathParams}}{{#params}}{{params}}{{/params}}{{^params}}_{{/params}}{{/hasPathParams}}) => {        
+        let url = `{{{path}}}`;
+        {{#hasPathParams}}
+        const qs = toQueryString(params as Record<string, any>)
+        {{/hasPathParams}}
+        {{^hasPathParams}}
+        {{#params}}
+        const qs = toQueryString({{params}} as Record<string, any>)
+        {{/params}}
+        {{/hasPathParams}}
+        {{#params}}
+        return `${url}?${qs}`
+        {{/params}}
+        {{^params}}
+        return url
+        {{/params}}
       },
       transformErrorResponse: transformErrorResponse,
       providesTags: [TAGS.{{tag}}],
     }),
     {{/isListEndpoint}}
     {{^isListEndpoint}}
-      query: ({{params}}) => `{{{path}}}`,
+      query: ({{#hasPathParams}}{ {{pathParamsList}} }{{/hasPathParams}}{{^hasPathParams}}{{#params}}{{params}}{{/params}}{{^params}}_{{/params}}{{/hasPathParams}}) => {
+        return `{{{path}}}`;
+      },
       transformErrorResponse: transformErrorResponse,
       providesTags: [TAGS.{{tag}}],
     }),
-    {{/isListEndpoint}}
-    {{/isMutation}}
-    {{#isMutation}}      query: (body) => ({
-        url: `{{{path}}}`,
-        method: '{{httpMethod}}',
-        body,
-        headers: {
-          'Content-Type': '{{{contentType}}}',
-        },
-      }),
+    {{/isListEndpoint}}{{/isMutation}}{{#isMutation}}
+      query: ({{#useBodyDestructuring}}{{#hasPathParams}}{ {{pathParamsList}}{{#bodyParam}}{{/bodyParam}}{{^bodyParam}}, ...body{{/bodyParam}} }{{/hasPathParams}}{{^hasPathParams}}body{{/hasPathParams}}{{/useBodyDestructuring}}{{^useBodyDestructuring}}{{#params}}{{params}}{{/params}}{{^params}}body{{/params}}{{/useBodyDestructuring}}) => {
+        let url = `{{{path}}}`;
+        return {
+          url,
+          method: '{{httpMethod}}',{{#useBodyDestructuring}}{{#requestBodyType}}{{#bodyParam}}
+          body: { {{bodyParam}} },{{/bodyParam}}{{^bodyParam}}
+          body,{{/bodyParam}}{{/requestBodyType}}{{/useBodyDestructuring}}{{^useBodyDestructuring}}{{#bodyParam}}
+          body: {{bodyParam}},{{/bodyParam}}{{/useBodyDestructuring}}
+          headers: {
+            'Content-Type': '{{{contentType}}}',
+          },
+        };
+      },
       transformErrorResponse: transformErrorResponse,
       invalidatesTags: [TAGS.{{tag}}],
     }),
