--- a/src/templates/thunkTemplate.mustache
+++ b/src/templates/thunkTemplate.mustache
@@ -24,16 +24,27 @@ const initialState: {{sliceName}}State = {
 {{#endpoints}}
 export const {{operationId}} = createAsyncThunk(
   '{{slicePath}}/{{operationId}}',
-  async ({{#params}}{{#types}}{{params}}: {{types}}{{/types}}{{/params}}, { rejectWithValue }) => {
-    try { {{#params}}
-      const qs = toQueryString({{{params}}}){{/params}}
-      const url = `{{{url}}}{{#params}}?${qs}{{/params}}`
+  
+  // async ({{#params}}{{#types}}{{#bodyParam}}params: {{types}}{{/bodyParam}}{{^bodyParam}}{{params}}: {{types}}{{/bodyParam}}{{/types}}{{/params}}{{^params}}_{{/params}}, { rejectWithValue }) => {
+  async ({{#params}}{{params}}{{#types}}: {{types}}{{/types}}{{/params}}{{^params}}_{{/params}}, { rejectWithValue }) => {
+    try {      let url = `{{{url}}}`;
+      {{#params}}
+      {{#queryParams}}
+      const qs = toQueryString({{queryParams}});
+      if (qs) url += `?${qs}`;
+      {{/queryParams}}
+      {{^queryParams}}
+      const qs = toQueryString({{#bodyParam}}params{{/bodyParam}}{{^bodyParam}}{{params}}{{/bodyParam}});
+      if (qs) url += `?${qs}`;
+      {{/queryParams}}
+      {{/params}}
+      
       const response = await fetch(url, {
         method: '{{method}}',
         headers: {
           'Content-Type': 'application/json',
         },{{#bodyParam}}
-        body: JSON.stringify({{bodyParam}}),{{/bodyParam}}
+        body: JSON.stringify({{#params}}params{{/params}}),{{/bodyParam}}
       });
 
       if (!response.ok) {
