feat: update package versions and enhance parameter handling in generators

--- a/src/templates/serviceTemplate.mustache
+++ b/src/templates/serviceTemplate.mustache
@@ -14,7 +14,7 @@ import { {{interface}} } from '../../models/{{modelName}}';
 {{/uniqueImports}}
 {{#uniqueParamImports}}
 {{#modelName}}
-import { {{interface}} } from 'src/api/params/{{modelName}}';
+import { {{interface}} } from '../../params/{{modelName}}';
 {{/modelName}}
 {{/uniqueParamImports}}
 
