fix: correct import path for createSlice in slice template

--- a/src/templates/sliceTemplate.mustache
+++ b/src/templates/sliceTemplate.mustache
@@ -1,4 +1,4 @@
-import { createSlice } from '@reduxjs/toolkit/react'
+import { createSlice } from '@reduxjs/toolkit'
 {{#uniqueImports}}
 import { {{interface}} } from '../../models/{{modelName}}'
 {{/uniqueImports}}
