feat: add enum generation support and refactor parameter handling for improved type management

--- a/src/templates/paramsTemplate.mustache
+++ b/src/templates/paramsTemplate.mustache
@@ -1,5 +1,10 @@
 {{#imports}}
+{{#isEnum}}
+import { {{name}} } from '../constants/{{fileName}}';
+{{/isEnum}}
+{{^isEnum}}
 import { {{name}} } from '../models/{{fileName}}';
+{{/isEnum}}
 {{/imports}}
 
 {{#interfaces}}
