feat: enhance enum handling by separating enum imports in model template and updating zod type generation

--- a/src/templates/modelTemplate.mustache
+++ b/src/templates/modelTemplate.mustache
@@ -2,6 +2,9 @@ import { z } from 'zod';
 {{#hasRegexImport}}
 import { REGEX_DATE, REGEX_DECIMAL_11_4, REGEX_DECIMAL_6_4, REGEX_DECIMAL_FLEXIBLE } from '../constants/regex-constants';
 {{/hasRegexImport}}
+{{#enumImports}}
+import { {{.}} } from '../constants/{{.}}';
+{{/enumImports}}
 {{#nestedModels}}
 import { {{.}} } from './{{.}}';
 {{/nestedModels}}
