feat: update interface naming from Serializer to Schema for consistency across templates and generators

--- a/src/templates/enumTemplate.mustache
+++ b/src/templates/enumTemplate.mustache
@@ -9,4 +9,4 @@ export enum {{enumName}} {
 {{/values}}
 }
 
-export type I{{enumName}}Serializer = {{enumName}};
+export type I{{enumName}}Schema = {{enumName}};
