--- a/src/templates/modelTemplate.mustache
+++ b/src/templates/modelTemplate.mustache
@@ -15,4 +15,4 @@ export const {{modelName}} = z.object({
 {{/properties}}
 });
 
-export type I{{modelName}}Serializer = z.infer<typeof {{modelName}}>;
+export type I{{modelName}}Schema = z.infer<typeof {{modelName}}>;
