feat: enhance model domain mapping and import paths for improved organization and clarity

--- a/src/templates/modelTemplate.mustache
+++ b/src/templates/modelTemplate.mustache
@@ -1,12 +1,12 @@
 import { z } from 'zod';
 {{#hasRegexImport}}
-import { REGEX_DATE, REGEX_DECIMAL_11_4, REGEX_DECIMAL_6_4, REGEX_DECIMAL_FLEXIBLE } from '../constants/regex-constants';
+import { REGEX_DATE, REGEX_TIME, REGEX_TIME_24, REGEX_DATETIME_ISO, REGEX_DECIMAL, REGEX_DECIMAL_RESTRICTED, REGEX_DECIMAL_11_4, REGEX_DECIMAL_6_4, REGEX_DECIMAL_FLEXIBLE } from '../../constants/regex-constants';
 {{/hasRegexImport}}
 {{#enumImports}}
-import { {{.}} } from '../constants/{{.}}';
+import { {{.}} } from '../../constants/{{.}}';
 {{/enumImports}}
 {{#nestedModels}}
-import { {{.}} } from './{{.}}';
+import { {{name}} } from '{{{importPath}}}';
 {{/nestedModels}}
 
 export const {{modelName}} = z.object({
