--- a/src/templates/modelTemplate.mustache
+++ b/src/templates/modelTemplate.mustache
@@ -1,6 +1,6 @@
 import { z } from 'zod';
 {{#hasRegexImport}}
-import { REGEX_DATE, REGEX_TIME, REGEX_TIME_24, REGEX_DATETIME_ISO, REGEX_DECIMAL, REGEX_DECIMAL_RESTRICTED, REGEX_DECIMAL_11_4, REGEX_DECIMAL_6_4, REGEX_DECIMAL_FLEXIBLE } from '{{{constantsImportPrefix}}}/regex-constants';
+import { {{#regexImports}}{{.}}{{^last}}, {{/last}}{{/regexImports}} } from '{{{constantsImportPrefix}}}/regex-constants';
 {{/hasRegexImport}}
 {{#enumImports}}
 import { {{.}} } from '{{{constantsImportPrefix}}}/{{.}}';
